; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_ggc-zone.c_lookup_page_table_entry.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_ggc-zone.c_lookup_page_table_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32*** }

@G = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*)* @lookup_page_table_entry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @lookup_page_table_entry(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32***, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  %6 = load i32***, i32**** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @G, i32 0, i32 0), align 8
  %7 = getelementptr inbounds i32**, i32*** %6, i64 0
  store i32*** %7, i32**** %3, align 8
  %8 = load i8*, i8** %2, align 8
  %9 = call i64 @LOOKUP_L1(i8* %8)
  store i64 %9, i64* %4, align 8
  %10 = load i8*, i8** %2, align 8
  %11 = call i64 @LOOKUP_L2(i8* %10)
  store i64 %11, i64* %5, align 8
  %12 = load i32***, i32**** %3, align 8
  %13 = load i64, i64* %4, align 8
  %14 = getelementptr inbounds i32**, i32*** %12, i64 %13
  %15 = load i32**, i32*** %14, align 8
  %16 = load i64, i64* %5, align 8
  %17 = getelementptr inbounds i32*, i32** %15, i64 %16
  %18 = load i32*, i32** %17, align 8
  ret i32* %18
}

declare dso_local i64 @LOOKUP_L1(i8*) #1

declare dso_local i64 @LOOKUP_L2(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
